# Combid

./: Cargo.toml  README.md
doc/: ident.md
src/: errors.rs  lib.rs
